load("@rules_blender//:index.bzl", "blender_render")

package(default_visibility = ["//visibility:public"])

_VARIATIONS = [
    "color",
    "all-color",
    "white",
    "black",
    "folder",
]

_SIZES = [
    44,
    128,
    150,
    256,
]

[blender_render(
    name = "ecsact-{}".format(variation),
    blend_file = "logo.blend",
    render_format = "PNG",
    view_layers = [variation],
) for variation in _VARIATIONS]

[blender_render(
    name = "ecsact-{}{}".format(variation, size),
    blend_file = "logo.blend",
    python_script_args = [
        "--res_x",
        str(size),
        "--res_y",
        str(size),
    ],
    python_scripts = ["override_resolution.py"],
    render_format = "PNG",
    view_layers = [variation],
) for variation in _VARIATIONS for size in _SIZES]

filegroup(
    name = "ecsact_logo",
    srcs =
        [":ecsact-{}".format(variation) for variation in _VARIATIONS] +
        [":ecsact-{}{}".format(variation, size) for variation in _VARIATIONS for size in _SIZES],
)
