load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_blender",
    integrity = "sha256-HKH9Y2wiL/EkVEFcaCZHT8ACW8SHX24UZ8EHEhwcI8w=",
    strip_prefix = "rules_blender-e5f5b1ef894fe4da7b3cbf85ca857b6fd3bdffba",
    urls = ["https://github.com/zaucy/rules_blender/archive/e5f5b1ef894fe4da7b3cbf85ca857b6fd3bdffba.zip"],
)

load("@rules_blender//:repo.bzl", "blender_repository")

blender_repository(name = "blender", blender_version = "system", only_system_installed_blender = True)
